parser/tests/parser/complex/invalid/dot_in_body_double.mf2
.foo $var...two = {:hello}
{{}}
=== spans ===
                    .foo $var...two = {:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                                  ^^^^ 1:0-1:4
Pattern                                             0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..26)
  .foo $var...two = {:hello}↵{{}}
  ^^^^^^^^^^^^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..31,
    declarations: [],
    body: QuotedPattern {
        span: @27..31,
        pattern: Pattern {
            parts: [],
        },
    },
}